# regular-expression-task

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp
machine/: CMakeLists.txt  machine.cpp  machine.h
regular/: CMakeLists.txt  regular.cpp  regular.h
tests/: basic_test.cpp  deterministic_test.cpp  operation_test.cpp  test_helper.cpp  test_helper.h
